--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,21 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>39.0</version>
     <types>
+        <members>Case.Standard</members>
+        <members>Lead.Standard</members>
+        <name>AssignmentRule</name>
+    </types>
+    <types>
+        <members>Case</members>
+        <members>Lead</members>
+        <name>AssignmentRules</name>
+    </types>
+    <types>
+        <members>Account.SLA__c</members>
+        <members>Account.UpsellOpportunity__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
         <members>AutotestM8_Custom_label2</members>
         <name>CustomLabel</name>
     </types>
