--- a/package.xml
+++ b/package.xml
@@ -2,12 +2,20 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>39.0</version>
     <types>
+        <members>Sridevi</members>
+        <members>demo1942017</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
         <members>AutotestM8_Custom_label2</members>
         <name>CustomLabel</name>
     </types>
     <types>
         <members>AutotestM8_Custom_Object4__c</members>
         <members>AutotestM8_Custom_object2__c</members>
+        <members>Test_Sridevi__c</members>
+        <members>demo_custom_object2_1942017__c</members>
+        <members>demo_custom_object_1942017__c</members>
         <name>CustomObject</name>
     </types>
 </Package>
