--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
     </types>
     <types>
         <members>AutotestM8_Custom_label2</members>
+        <members>custom_label1_1942017</members>
         <name>CustomLabel</name>
     </types>
     <types>
