--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,7 @@
     <types>
         <members>Sridevi</members>
         <members>demo1942017</members>
+        <members>demosecondorg</members>
         <name>ApexClass</name>
     </types>
     <types>
