--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
     <types>
         <members>Account.SLA__c</members>
         <members>Account.UpsellOpportunity__c</members>
+        <members>AutotestM8_Custom_Object4__c.marital_status__c</members>
         <name>CustomField</name>
     </types>
     <types>
